# smallurl

./: .env.example  .gitignore  README.md  pyproject.toml
config/: urls.py
config/settings/: __init__.py  base.py  production.py
smallurl/: admin.py  forms.py  models.py  shortener.py  urls.py  utils.py  views.py
smallurl/migrations/: 0001_initial.py  0002_alter_shortenedlink_original_link.py  0003_shortenedlink_encrypted_url_shortenedlink_short_url.py  0004_alter_shortenedlink_encrypted_url.py
smallurl/templates/smallurl/: access_logs.html  base.html  decrypt.html  index.html  success.html  target.html  view_links.html
