[tool.poetry]
name = "smallurl"
version = "0.1.0"
description = ""
authors = ["alextamboli <alex.tamboli8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-ipware = "^6.0.2"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
